--- a/ClientDesktopApp/src/main/resources/fxml/login.fxml
+++ b/ClientDesktopApp/src/main/resources/fxml/login.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="153.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="153.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.bubxtech.addomsystem.ClientDesktopApp.controllers.LoginViewFxmlController">
    <children>
-      <Button id="loginButton" layoutX="14.0" layoutY="114.0" mnemonicParsing="false" text="Zaloguj" />
-      <Button id="exitButton" layoutX="231.0" layoutY="114.0" mnemonicParsing="false" text="Wyjście" />
+      <Button fx:id="loginButton" id="loginButton" layoutX="14.0" layoutY="114.0" mnemonicParsing="false" text="Zaloguj" />
+      <Button fx:id="exitButton" id="exitButton" layoutX="231.0" layoutY="114.0" mnemonicParsing="false" text="Wyjście" />
       <Label id="lognTextLabel" layoutX="31.0" layoutY="50.0" text="Login:" />
       <Label id="passwordTextLabel" layoutX="31.0" layoutY="81.0" text="Hasło:" />
       <PasswordField id="passwordField" layoutX="75.0" layoutY="77.0" prefHeight="25.0" prefWidth="208.0" />
